--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>login</title>
-    <link  rel="stylesheet" href="CssForlogin.css">
+    <link  rel="stylesheet" href="../CSS/CssForlogin.css">
 </head>
 <body>
   <center>
    <fieldset id="feildset">
      <legend>login </legend>
-    <form id="loginForm" method="post" action="serverforLogin.php" target="hide_me_frame">
+    <form id="loginForm" method="post" action="../PHP/serverforLogin.php" target="hide_me_frame">
         <p>
            User Name :<br>
           <input type="text" id="username" name="Username">
@@ -27,6 +27,6 @@
     <iframe id="hide_me_frame" name="hide_me_frame" ></iframe>
    </fieldset>
   </center>
-    <script src="loginAndSignUp.js"></script>
+    <script src="../JS/loginAndSignUp.js"></script>
 </body>
 </html>
