--- a/HTML/home.html
+++ b/HTML/home.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title id="mytitle">Home</title>
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <link rel="stylesheet" href="styleForHomePage.css">
+        <link rel="stylesheet" href="../CSS/styleForHomePage.css">
         <script>
           function chengeTitl(newTitle){
             document.title = newTitle;
@@ -14,7 +14,7 @@
     <body>
       <header>
         <nav id="header-nav">
-           <img id="logo" src="logo.jpg"> <span>EUEEP</span>
+           <img id="logo" src="../IMAGES/logo.jpg"> <span>EUEEP</span>
            <a  href="welcome.html" onclick="chengeTitl('Home')" target="myfram">Home</a>
            <a href="Upload.html" onclick="chengeTitl('Upload')" target="myfram">UPLOAD</a>
            <a href="Update.html" onclick="chengeTitl('Update')"target="myfram">UPDATE</a>
