working page without media querry

--- a/HTML/takeExam.html
+++ b/HTML/takeExam.html
@@ -24,7 +24,7 @@
          </form> 
        </main>
        
-       <iframe  name="displayed_exam_container" style="float:right;width:84%;height:388px;border-width: 0;overflow:auto"></iframe>
+       <iframe  name="displayed_exam_container" id="ExamContainer"></iframe>
 
          <aside id="left_side_bar">
            <div class="natural-science">
