--- a/HTML/display.html
+++ b/HTML/display.html
@@ -23,7 +23,7 @@
             <input text="submit" name="submit_hidden_form_forDisplay" value="submit">
          </form> 
        </main>
-      <iframe  name="displayed_exam_container" style="float:right;width:84%;height:388px;border-width: 0;overflow:auto"></iframe>
+      <iframe  name="displayed_exam_container" id="ExamContainer"></iframe>
          <aside id="left_side_bar">
            <div class="natural-science">
                <div class="department">
