delete with search is added

--- a/HTML/Update.html
+++ b/HTML/Update.html
@@ -43,7 +43,7 @@
                <br>FOURTH OPTION:<br>
                <textarea  id="responseContainer5"class="options clear"  name="fourthOption"required></textarea>
                <br>ANSWER:<br>
-               <textarea  id="responseContainer6"class="ans clear"  name="answer"          required></textarea><br>
+               <textarea  id="responseContainer6"class="ans clear"  name="answer"         ></textarea><br>
                <input style="display:none;" type="text" id="responseContainer7" name="Question_id_4update">
                <input style="display: none;" type="text" name="controll_exam_type4update" id="controll_exam_type4update">
                <input  style="display: none;" type="text" name="controll_subject_type4update" id="controll_subject_type4update">
