--- a/HTML/AdminHome.html
+++ b/HTML/AdminHome.html
@@ -5,6 +5,7 @@
         <title id="mytitle">Home</title>
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <link rel="stylesheet" href="../CSS/Home.css">
+        <link rel="icon" href="../IMAGES/logo.jpg">
     </head>
     <body>
       <header>
