--- a/HTML/StudentHome.html
+++ b/HTML/StudentHome.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>Home</title>
+        <link rel="icon" href="../IMAGES/logo.jpg">
         <link rel="stylesheet" href="../CSS/Home.css">
     </head>
     <body>
