first completed version

--- a/HTML/AboutUs.html
+++ b/HTML/AboutUs.html
@@ -54,7 +54,7 @@
       </div>
      </div>
    </center>
-
+   <div class="contain">
     <div class="col col1">
         <figure>   
             <img src="../IMAGES/habtamu.jpg" width="70%" height="200" alt="Habtamu Argeta" >
@@ -68,11 +68,10 @@
             that separates the truly skilled programmers from the novices. With modern computing technology,
             you can accomplish some tasks without knowing much about
             algorithms, but with a good background in algorithms, you can do much, much
-            more." And you can contact me via <a style="text-decoration: none;"  href="https://habtamuargeta.github.io/My-Resum/ContactMe.html">
+            more." And you can contact me via <a style="text-decoration: none;"  href="https://habtamuargeta.github.io/My-Resum/ContactMe.html" target="_blank">
             habtamuargeta.com</a>
         </p>
     </div>
-    <div class="contain">
     <div class="col col2">
         <figure>   
             <img src="../IMAGES/kedir.jpg" width="70%" height="200" alt="kedir Konse" >
@@ -121,7 +120,21 @@
         </figure>
         <p>Senior Computer Scientist at AAU</p>
     </div>
+    <div class="col7">
+        <h1>Our contact</h1>
+         <div id="footerLeft">
+           <p> <a href="mailto:argethabtamu8@gmail.com">&#x2709;argethabtamu8@gmail.com</a></p>
+            <p><a href="mailto:kadirkonse8@gmail.com">&#x2709;kadirkonse8@gmail.com</a></p>
+            <p><a href="mailto:	eebbaa2001@gmail.com">&#x2709;eebbaa2001@gmail.com</a></p>
+         </div>
+          <div id="footerRight">
+            <p><a href="mailto:badrisiraj8@gmail.com">&#x2709;badrisiraj8@gmail.com</a></p>
+            <p><a href="mailto:injifanotu@gmail.com">&#x2709;injifanotu@gmail.com</a></p>
+            <p><a href="mailto:abhope2022@gmail.com">&#x2709;abhope2022@gmail.com</a></p>
+         </div>
     </div>
+    </div>
+    
      <script src="../JS/WelcomAndAboutUs.js"></script>
 </body>
 </html>
