screenshot of SW is added

--- a/HTML/AboutUs.html
+++ b/HTML/AboutUs.html
@@ -23,32 +23,32 @@
   <center>
     <div class="slidecontanair">
         <div class="slide animate">
-          <div class="text1">CONTERBUTERS</div>
+          <div class="text1">CONTRIBUTERS</div>
           <div class="text2"> Habtamu Argeta</div>
           <img src="../IMAGES/habtamu.jpg" width="70%" height="560" alt="Habtamu Argeta" >
         </div>
         <div class="slide animate">
-         <div class="text1">CONTERBUTERS</div>
-         <div class="text2 t2">Kedir konse</div>
+         <div class="text1">CONTRIBUTERS</div>
+         <div class="text2 t2">Kadir konse</div>
          <img src="../IMAGES/kedir.jpg" width="80%" height="560" alt="Kedir konse" >
        </div>
        <div class="slide animate">
-         <div class="text1">CONTERBUTERSP</div>
+         <div class="text1">CONTRIBUTERS</div>
          <div class="text2 t3">Eba Mokonon</div>
          <img src="../IMAGES/Eba.jpg" width="80%" height="560" alt="Eba Mokonon">
        </div>
        <div class="slide animate">
-         <div class="text1">CONTERBUTERS</div>
+         <div class="text1">CONTRIBUTERS</div>
          <div class="text2 t4">Badir Siraj</div>
          <img src="../IMAGES/badir.jpg" width="80%" height="560" alt="Badir Siraj" >
        </div>
        <div class="slide animate">
-         <div class="text1">CONTERBUTERS</div>
+         <div class="text1">CONTRIBUTERS</div>
          <div class="text2 t5" >Engifano Tamiru</div>
          <img src="../IMAGES/Engifano.jpg" width="80%" height="560" alt="Engifano Tamiru" >
        </div>
        <div class="slide animate">
-        <div class="text1">CONTERBUTERS</div>
+        <div class="text1">CONTRIBUTERS</div>
         <div class="text2 t5" >Abdi Bekele</div>
         <img src="../IMAGES/Abdi.jpg" width="80%" height="560" alt="Abdi Bekele" >
       </div>
@@ -78,8 +78,8 @@
             <figcaption>Kedir konse</figcaption>
         </figure>
         <p>
-            I am kadir konse 3rd year computer science student.
-            I am in love with tech staffs special coding
+            I am Kadir Konse, 3rd year computer science student at AAU.
+            I am in love with tech staffs  specially coding.
         </p>
     </div>
 
@@ -89,8 +89,8 @@
             <figcaption>Eba Mokonon</figcaption>
         </figure>
         <p>
-            Eba is Third Year Computer Science Student at Addis Ababa University 
-            Eba is  Self-motivated, Creative and Visionary
+            I am Eba Mekonnen, I'm third Year Computer Science Student at Addis Ababa University. 
+            Eba is  Self-motivated, Creative and Visionary.
         </p>
     </div>
 
@@ -101,7 +101,7 @@
         </figure>
         <p>
             My name is Badri Siraj I’m Computer science student at Addis Ababa University 
-            I’m Web developer.  I have skill on HTML, CSS, JavaScript, PHP and MYSQL Database.
+            I’m Web developer.  I have skill on HTML, CSS, JavaScript, PHP and MYSQL Database.And i am also camera man.
         </p>
     </div>
 
